[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreValue" type="Label" parent="."]
anchor_right = 1.0
margin_left = 877.0
margin_top = 2.0
margin_right = 5.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -160.5
margin_bottom = 160.5
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]

[node name="ScoreText" type="Label" parent="."]
margin_left = 751.0
margin_top = 1.0
margin_right = 946.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="HighScoreText" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "High Score:"

[node name="HighScoreValue" type="Label" parent="."]
margin_left = 308.0
margin_top = 2.0
margin_right = 353.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "0"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
